--- a/4-pong/CMakeLists.txt
+++ b/4-pong/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required (VERSION 3.8)
 include_directories("glad")
 include_directories("KHR")
 # Add source to this project's executable.
-add_executable (4-pong "4-pong.cpp" "glad.c" "Player.cpp")
+add_executable (4-pong "4-pong.cpp" "glad.c" Ball.cpp Ball.h Player.cpp Player.h)
 
 # TODO: Add tests and install targets if needed.
 target_link_libraries(4-pong glfw)
