--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,22 @@
 # and include sub-projects here.
 #
 cmake_minimum_required (VERSION 3.8)
+cmake_policy(SET CMP0079 NEW)
 
 project ("4-pong")
-
-# Include sub-projects.
-add_subdirectory ("4-pong")
 
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-add_subdirectory("glfw")
 
+add_subdirectory ("4-pong")
+add_subdirectory("glfw")
 add_subdirectory("glm")
+
+set(GLAD_DIR "${PROJECT_SOURCE_DIR}/glad")
+add_library("glad" "${GLAD_DIR}/src/glad.c")
+target_include_directories("glad" PRIVATE "${GLAD_DIR}/include")
+target_include_directories(${PROJECT_NAME} PRIVATE "${GLAD_DIR}/include")
+target_link_libraries(${PROJECT_NAME} "glad" "${CMAKE_DL_LIBS}")
+
 
