--- a/4-pong/CMakeLists.txt
+++ b/4-pong/CMakeLists.txt
@@ -4,7 +4,7 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
-add_executable (4-pong 4-pong.cpp Ball.cpp Ball.h Player.cpp Player.h GameObject.cpp GameObject.h shaders/Shaders.h)
+add_executable (4-pong 4-pong.cpp Ball.cpp Player.cpp GameObject.cpp shaders/Shaders.cpp shaders/Shaders.h)
 
 # TODO: Add tests and install targets if needed.
 target_link_libraries(4-pong glfw)
